--- a/dialog.ui
+++ b/dialog.ui
@@ -16,14 +16,14 @@
   <widget class="QTabWidget" name="tabWidget">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>40</y>
+     <x>30</x>
+     <y>30</y>
      <width>711</width>
      <height>381</height>
     </rect>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -173,8 +173,8 @@
     <widget class="QLabel" name="label_15">
      <property name="geometry">
       <rect>
-       <x>0</x>
-       <y>-10</y>
+       <x>10</x>
+       <y>-20</y>
        <width>671</width>
        <height>411</height>
       </rect>
@@ -182,21 +182,52 @@
      <property name="text">
       <string/>
      </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
+     </property>
      <property name="pixmap">
       <pixmap>../../../Downloads/246926994_587057979173736_3602103953791256294_n.png</pixmap>
      </property>
     </widget>
-    <widget class="QLineEdit" name="le_code_2">
+    <widget class="QPushButton" name="wa">
      <property name="geometry">
       <rect>
-       <x>460</x>
-       <y>110</y>
-       <width>113</width>
-       <height>22</height>
+       <x>440</x>
+       <y>50</y>
+       <width>141</width>
+       <height>28</height>
       </rect>
      </property>
+     <property name="text">
+      <string>code a barres</string>
+     </property>
     </widget>
-    <zorder>le_code_2</zorder>
+    <widget class="QLabel" name="img_label">
+     <property name="geometry">
+      <rect>
+       <x>440</x>
+       <y>120</y>
+       <width>151</width>
+       <height>121</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="inserer_photo">
+     <property name="geometry">
+      <rect>
+       <x>470</x>
+       <y>270</y>
+       <width>93</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>inserer_photo</string>
+     </property>
+    </widget>
     <zorder>label_15</zorder>
     <zorder>label</zorder>
     <zorder>label_2</zorder>
@@ -210,6 +241,27 @@
     <zorder>la_qualite</zorder>
     <zorder>le_stock</zorder>
     <zorder>valider</zorder>
+    <zorder>wa</zorder>
+    <zorder>img_label</zorder>
+    <zorder>inserer_photo</zorder>
+   </widget>
+   <widget class="QWidget" name="tab_6">
+    <attribute name="title">
+     <string>Page</string>
+    </attribute>
+    <widget class="QPushButton" name="qrcode">
+     <property name="geometry">
+      <rect>
+       <x>230</x>
+       <y>40</y>
+       <width>93</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>qrcode</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
@@ -221,8 +273,86 @@
        <x>10</x>
        <y>10</y>
        <width>641</width>
-       <height>281</height>
+       <height>181</height>
       </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="trier">
+     <property name="geometry">
+      <rect>
+       <x>520</x>
+       <y>290</y>
+       <width>93</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>tri pa code</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="tri_prix">
+     <property name="geometry">
+      <rect>
+       <x>570</x>
+       <y>250</y>
+       <width>93</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>tri par prix</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="tri_stock">
+     <property name="geometry">
+      <rect>
+       <x>450</x>
+       <y>250</y>
+       <width>93</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>tri par stock</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="PDF">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>260</y>
+       <width>93</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>PDF</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_17">
+     <property name="geometry">
+      <rect>
+       <x>450</x>
+       <y>210</y>
+       <width>141</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>trier :</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="Qr_code">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>220</y>
+       <width>93</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>QRcode</string>
      </property>
     </widget>
    </widget>
@@ -447,6 +577,57 @@
     <zorder>le_stock_2</zorder>
     <zorder>le_nom_2</zorder>
     <zorder>comboBox_2</zorder>
+   </widget>
+   <widget class="QWidget" name="tab_5">
+    <attribute name="title">
+     <string>Page</string>
+    </attribute>
+    <widget class="QLabel" name="label_16">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>30</y>
+       <width>171</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>code a rechercher :</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="chercher">
+     <property name="geometry">
+      <rect>
+       <x>280</x>
+       <y>30</y>
+       <width>113</width>
+       <height>22</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="rechercher">
+     <property name="geometry">
+      <rect>
+       <x>470</x>
+       <y>30</y>
+       <width>93</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>RECHERCHE</string>
+     </property>
+    </widget>
+    <widget class="QTableView" name="tab_recehreche">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>110</y>
+       <width>621</width>
+       <height>192</height>
+      </rect>
+     </property>
+    </widget>
    </widget>
   </widget>
  </widget>
